Apply Validation in Login

--- a/ILeavePortal/appsettings.json
+++ b/ILeavePortal/appsettings.json
@@ -6,9 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Connection": "Data Source=DESKTOP-6CAGAKO\\SQLEXPRESS;Initial Catalog=ILeavePortal;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  "Connection": "Data Source=DESKTOP-6CAGAKO\\SQLEXPRESS;Initial Catalog=ILeavePortal;User ID=jinalp;Password=jinal12;Trust Server Certificate=True"
   //"ConnectionStrings": {
-  //  "DefaultConnection": "Data Source=DESKTOP-6CAGAKO\\SQLEXPRESS;Initial Catalog=ILeavePortal;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-
+  //  "Connection": "Data Source=DESKTOP-6CAGAKO\\SQLEXPRESS;Initial Catalog=ILeavePortal;Persist Security Info=True;User ID=jinalp;Password=jinal12;Trust Server Certificate=True"
   //}
 }
